Revision history for DBIx::Class

    * Fixes
        - Unaliased "dark" selectors no longer throw off prefetch
        - Fix proper composition of bind values across all possible
          SQL areas ( group_by => \[ ... ] now works properly )

0.08126 2010-12-28 18:10 (UTC)
    * Fixes
        - Bump forgotten Class::Accessor::Grouped core dependency
        - Promote forgotten Hash::Merge optdep to a hard requirement
        - Skip t/storage/error.t on smokers with leaking perls
        - Fix t/storage/txn.t deadlocks on slower machines
        - Do not run on smokers if a trial Package::Stash is found

0.08125 2010-12-27 04:30 (UTC)
    * New Features / Changes
        - New method ResultSource columns_info method, returning multiple
          pairs of column name/info at once
        - $rs->search now throws when called in void context, as it makes
          no sense (and is nearly always a sign of a bug/misdesign)
        - Restore long-lost ability to supply unbalanced select/as pairs
          e.g. +select => \'DISTINCT(foo, bar)', +as => ['foo', 'bar']
        - +columns now behaves just like columns by not stripping a
          fully-qualified 'as' spec (i.e. foo.bar results in $obj->foo->bar)
        - Deprecate legacy $rs->search( %condition ) syntax (warn once per
          callsite)
        - NULL is now supplied unquoted to all debug-objects, in order to
          differentiate between a real NULL and the string 'NULL'
        - New search() condition operator -value used to pass complex bind
          values to DBI: search({ array_col => { -value => [1,2,3] }})
        - Add full INSERT...RETURNING support for Oracle
        - Deprecate use of -nest in search conditions (warn once per
          callsite)
        - Deprecate the completely useless DBIx::Class::Serialize::Storable
          result component

    * Fixes
        - Fixed read-only attribute set attempt in ::Storage::Replicated
          (RT#62642)